<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/camera_settings_category_title">


        <ListPreference
            android:entries="@array/capture_mode_items"
            android:entryValues="@array/capture_mode_values"
            android:key="CAPTURE_MODE_PREFERENCE"
            android:summary="@string/capture_mode_summary"
            android:title="@string/capture_mode_title" />

        <EditTextPreference
            app:key="EXPOSURE_COMPENSATION_VALUE"
            app:summary="@string/exposure_compensation_summary"
            app:title="@string/exposure_compensation_title" />

        <SwitchPreferenceCompat
            app:key="MANUAL_SETTINGS"
            app:summary="@string/manual_settings_summary"
            app:title="@string/manual_settings_title" />

        <EditTextPreference
            app:dependency="MANUAL_SETTINGS"
            app:key="SENSOR_EXPOSURE_TIME"
            app:summary="@string/sensor_exposure_time_summary"
            app:title="@string/sensor_exposure_time_title" />

        <EditTextPreference
            app:dependency="MANUAL_SETTINGS"
            app:key="SENSOR_SENSITIVITY"
            app:summary="@string/sensor_sensitivity_summary"
            app:title="@string/sensor_sensitivity_title" />
    </PreferenceCategory>

</PreferenceScreen>