<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".view.capture.CaptureDialogFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lego_class_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/provide_lego_label_hint" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/automatic_mode_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/capture_automatic_mode_switch" />

    <LinearLayout
        android:id="@+id/capture_interval_setting"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:labelFor="@+id/seekBar"
            android:text="@string/capturing_interval_label" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:max="18"
            android:progress="8" />

        <TextView
            android:id="@+id/current_seek_bar_value"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="2500 ms"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>
