<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.analyzefast.AnalyzeFastFragment">

    <data>

        <variable
            name="analyzeFastViewModel"
            type="com.lsorter.view.analyzefast.AnalyzeFastViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder_fast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/session_name_TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:scaleType="fitCenter">

        </androidx.camera.view.PreviewView>

        <com.lsorter.analyze.layer.GraphicOverlay
            android:id="@+id/graphic_overlay_fast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/session_name_TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <WebView
            android:id="@+id/webView_fast"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/session_name_TextInputLayout"
            app:layout_constraintDimensionRatio="9:16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<!--        app:layout_constraintDimensionRatio="9/16"-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/session_name_TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/linearLayout_fast"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewFinder_fast">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/session_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/save_img_hint"

                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@string/save_img_example" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/linearLayout_fast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@android:color/white"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/session_name_TextInputLayout">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/save_img_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:minHeight="48dp"
                android:text="@string/save_img" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/web_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:minHeight="48dp"
                android:text="@string/web_prev" />

            <Button
                android:id="@+id/start_stop_sorting_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> analyzeFastViewModel.onActionButtonClicked()}"
                android:text="@string/analyze_fast" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>